--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,3 +51,11 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'viktar_kaliada@epam.com(65616e90-0a9a-44e1-aee8-698d57db2454)'
+    appType: 'webApp'
+    WebAppName: 'appsvc-yaml-02-vk'
+    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
