--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,48 +14,77 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-steps:
-- task: NuGetToolInstaller@1
+stages:
+- stage: BuildIt
+  jobs:
+  - job: BuildTheCode
+    steps:
+    - task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+    - task: NuGetCommand@2
+      inputs:
+        restoreSolution: '$(solution)'
 
-- task: replacetokens@3
-  inputs:
-    targetFiles: '**/*.cshtml'
-    encoding: 'auto'
-    writeBOM: true
-    actionOnMissing: 'warn'
-    keepToken: false
-    tokenPrefix: '#{'
-    tokenSuffix: '}#'
-    useLegacyPattern: false
-    enableTransforms: false
-    enableTelemetry: true
+    - task: replacetokens@3
+      inputs:
+        targetFiles: '**/*.cshtml'
+        encoding: 'auto'
+        writeBOM: true
+        actionOnMissing: 'warn'
+        keepToken: false
+        tokenPrefix: '#{'
+        tokenSuffix: '}#'
+        useLegacyPattern: false
+        enableTransforms: false
+        enableTelemetry: true
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: VSBuild@1
+      inputs:
+        solution: '$(solution)'
+        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: VSTest@2
+      inputs:
+        platform: '$(buildPlatform)'
+        configuration: '$(buildConfiguration)'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'viktar_kaliada@epam.com(65616e90-0a9a-44e1-aee8-698d57db2454)'
-    appType: 'webApp'
-    WebAppName: 'appsvc-yaml-02-vk'
-    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
+- stage: TestDeployment
+  jobs:
+  - job: PublishTheCode
+    steps:
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(System.ArtifactsDirectory)'
+
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        deploymentScope: 'Resource Group'
+        azureResourceManagerConnection: 'viktar_kaliada@epam.com(65616e90-0a9a-44e1-aee8-698d57db2454)'
+        subscriptionId: '65616e90-0a9a-44e1-aee8-698d57db2454'
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: 'ado-yaml-learn-2'
+        location: 'North Europe'
+        templateLocation: 'Linked artifact'
+        csmFile: '$(System.ArtifactsDirectory)/**/WebAppWithSlots-Windows.json'
+        csmParametersFile: '$(System.ArtifactsDirectory)/**/azuredeploy.parameters.json'
+        overrideParameters: '-appName appsvc-yaml-02-vk'
+        deploymentMode: 'Incremental'
+
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'viktar_kaliada@epam.com(65616e90-0a9a-44e1-aee8-698d57db2454)'
+        appType: 'webApp'
+        WebAppName: 'appsvc-yaml-02-vk'
+        packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
