--- a/myWebDeploy/LinuxWebAppWithSlots.json
+++ b/myWebDeploy/LinuxWebAppWithSlots.json
@@ -218,7 +218,7 @@
       "apiVersion": "2014-04-01",
       "name": "[variables('webSiteName')]",
       "type": "Microsoft.Insights/components",
-      "location": "East US",
+      "location": "[resourceGroup().location]",
       "dependsOn": [
         "[resourceId('Microsoft.Web/sites/', variables('webSiteName'))]"
       ],
