--- a/myNewDadApp/ci-build.yml
+++ b/myNewDadApp/ci-build.yml
@@ -17,7 +17,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/myNewDadApp.csproj'
+  solution: '**/$(projectName).csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
